--- a/apps/account/templates/veterinario/create.html
+++ b/apps/account/templates/veterinario/create.html
@@ -6,7 +6,7 @@
 <div class="col-md-12 grid-margin stretch-card ">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">Cadastro de compra</h4>
+        <h4 class="card-title">Cadastro de veterinario</h4>
         <form class="forms-sample" method="post" action="{% url 'apps:account:veterinario_create' %}" enctype="multipart/form-data">
             <div class="form-group">
             {% csrf_token %}
