--- a/apps/account/templates/veterinario/update.html
+++ b/apps/account/templates/veterinario/update.html
@@ -6,8 +6,8 @@
 <div class="col-md-12 grid-margin stretch-card ">
     <div class="card">
       <div class="card-body">
-        <h4 class="card-title">Cadastro de tecnico</h4>
-        <form class="forms-sample" method="post" action="{% url 'apps:account:tecnico_create' %}" enctype="multipart/form-data">
+        <h4 class="card-title">Cadastro de veterinario</h4>
+        <form class="forms-sample" method="post" action="{% url 'apps:account:veterinario_update' object.id %}" enctype="multipart/form-data">
             <div class="form-group">
             {% csrf_token %}
             {{form}} <!-- form de compra -->
