--- a/apps/atendimento/templates/partials/form_tipo_servico.html
+++ b/apps/atendimento/templates/partials/form_tipo_servico.html
@@ -6,7 +6,7 @@
               <div class="form-group">
               {% csrf_token %}
               {{form}}
-              <button type="submit" class="btn btn-primary mr-2">Cadastrar</button>
+              <button type="submit" class="btn btn-primary mr-2 btn-block">Cadastrar</button>
           </div>
           </form>
         </div>
