--- a/apps/core/templates/partials/sidebar.html
+++ b/apps/core/templates/partials/sidebar.html
@@ -90,7 +90,7 @@
       </div>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="collapse" href="#type_servece" aria-expanded="false" aria-controls="auth">
+      <a class="nav-link" data-bs-toggle="collapse" href="#type_servece" aria-expanded="false" aria-controls="type_servece">
         <i class="menu-icon mdi mdi mdi-wallet-giftcard"></i>
         <span class="menu-title">Tipo de Serviço</span>
         <i class="menu-arrow"></i>
@@ -129,11 +129,11 @@
       </div>
     </li>
     <li class="nav-item">
-      <a class="nav-link" data-bs-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+      <a class="nav-link" data-bs-toggle="collapse" href="#veterinario" aria-expanded="false" aria-controls="veterinario">
         <span class="menu-title">Veterinario</span>
         <i class="menu-arrow"></i>
       </a>
-      <div class="collapse" id="auth">
+      <div class="collapse" id="veterinario">
         <ul class="nav flex-column sub-menu">
           <li class="nav-item"> <a class="nav-link" href="{% url 'apps:account:veterinario_create' %}"> Cadastrar  </a></li>
           <li class="nav-item"> <a class="nav-link" href="{% url 'apps:account:veterinario_list' %}"> Listar </a></li>
