--- a/apps/venda/templates/produto_update.html
+++ b/apps/venda/templates/produto_update.html
@@ -11,7 +11,7 @@
                 <div class="form-group">
                     {% csrf_token %}
                     {{form}} <!-- form de compra -->
-                    <button type="submit" class="btn btn-primary mr-2">Cadastrar</button>
+                    <button type="submit" class="btn btn-primary mr-2 btn-block">Salvar Alterações</button>
                 </div>
             </form>
         </div>
