--- a/apps/account/templates/tecnico/update.html
+++ b/apps/account/templates/tecnico/update.html
@@ -11,8 +11,8 @@
             <div class="form-group">
             {% csrf_token %}
             {{form}} <!-- form de compra -->
-            <button type="submit" class="btn btn-primary mr-2">Cadastrar</button>
-        </div>
+          </div>
+          <button type="submit" class="btn btn-primary mr-2">Salvar</button>
         </form>
       </div>
     </div>
