--- a/apps/account/templates/veterinario/list.html
+++ b/apps/account/templates/veterinario/list.html
@@ -70,10 +70,10 @@
                             </td>
                             <td>
                                 <div class="dropdown">
-                                    <button type="button" class="btn btn-success dropdown-toggle"
-                                        id="dropdownMenuIconButton4" data-bs-toggle="dropdown" aria-haspopup="true"
-                                        aria-expanded="false">
-                                        <i class="mdi mdi-dots-vertical"></i>
+                  <button type="button" class="btn btn-success" id="dropdownMenuIconButton4" data-bs-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    <i class="mdi mdi-chevron-down"></i>
+                  </button>
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuIconButton3">
                                         <a class="dropdown-item"
