--- a/apps/atendimento/templates/tipo_servico_create_up.html
+++ b/apps/atendimento/templates/tipo_servico_create_up.html
@@ -11,7 +11,7 @@
                 <div class="form-group">
                     {% csrf_token %}
                     {{form}}
-                    <button type="submit" class="btn btn-primary mr-2">Atualizar</button>
+                    <button type="submit" class="btn btn-primary mr-2 btn-block">Atualizar</button>
                 </div>
             </form>
         </div>
