--- a/apps/venda/templates/partials/table_compra.html
+++ b/apps/venda/templates/partials/table_compra.html
@@ -1,80 +1,81 @@
 {% load static %}
 <div class="col-lg-12 grid-margin stretch-card">
-    <div class="card">
-      <div class="card-body">
-        <div class="d-sm-flex justify-content-between align-items-start">
-          <div>
-            <h4 class="card-title card-title-dash">Ultimas vendas</h4>
-          </div>
-          <div>
-            <div class="dropdown">
-              <a href="{% url 'apps:venda:compra_create' %}">
-              <button class="btn btn-primary btn-lg text-white mb-0 me-0" type="button"><i class="mdi mdi-plus"></i>Adicionar venda</button>
+  <div class="card">
+    <div class="card-body">
+      <div class="d-sm-flex justify-content-between align-items-start">
+        <div>
+          <h4 class="card-title card-title-dash">Ultimas vendas</h4>
+        </div>
+        <div>
+          <div class="dropdown">
+            <a href="{% url 'apps:venda:compra_create' %}">
+              <button class="btn btn-primary btn-lg text-white mb-0 me-0" type="button"><i
+                  class="mdi mdi-plus"></i>Adicionar venda</button>
             </a>
-            </div>
           </div>
         </div>
-        <div class="table-responsive">
-          <table class="table table-striped">
-            <thead>
-              <tr>
-                <th>
-                  #id
-                </th>
-                <th>
-                  Cliente
-                </th>
-                <th>
-                  valor
-                </th>
-                <th>
-                  data da compra
-                </th>
-                <th>
-                  atendente
-                </th>
-                <th>
-                  Ações
-                </th>
-              </tr>
-            </thead>
-            <tbody>
-                {% for c in compras %}
-                <tr>
-                  <td class="py-1">
-                    #{{c.id}}
-                  </td>
-                  <td class="py-1">
-                    {{c.cliente.nome}}
-                  </td>
-                  <td>
-                    {{c.valor_total}}
-                  </td>
-                  <td>
-                      {{c.data_compra}}
-                  </td>
-                  <td>
-                    {{c.atendente}}
-                  </td>
-                  <td>
-                    <div class="dropdown">
-                      <button type="button" class="btn btn-success dropdown-toggle" id="dropdownMenuIconButton4"
-                        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="mdi mdi-dots-vertical"></i>
-                      </button>
-                      <div class="dropdown-menu" aria-labelledby="dropdownMenuIconButton3">
-                        <a class="dropdown-item"  href="{% url 'apps:venda:compra_update' c.id %}">
-                          editar
-                        </a>
-                        <a class="dropdown-item" href="#">apagar</a>
-                      </div>
-                    </div>
-                  </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-          </table>
-        </div>
+      </div>
+      <div class="table-responsive">
+        <table class="table table-striped">
+          <thead>
+            <tr>
+              <th>
+                #id
+              </th>
+              <th>
+                Cliente
+              </th>
+              <th>
+                valor
+              </th>
+              <th>
+                data da compra
+              </th>
+              <th>
+                atendente
+              </th>
+              <th>
+                Ações
+              </th>
+            </tr>
+          </thead>
+          <tbody>
+            {% for c in compras %}
+            <tr>
+              <td class="py-1">
+                #{{c.id}}
+              </td>
+              <td class="py-1">
+                {{c.cliente.nome}}
+              </td>
+              <td>
+                {{c.valor_total}}
+              </td>
+              <td>
+                {{c.data_compra}}
+              </td>
+              <td>
+                {{c.atendente}}
+              </td>
+              <td>
+                <div class="dropdown">
+                  <button type="button" class="btn btn-success" id="dropdownMenuIconButton4" data-bs-toggle="dropdown"
+                    aria-haspopup="true" aria-expanded="false">
+                    <i class="mdi mdi-chevron-down"></i>
+                  </button>
+                  <div class="dropdown-menu" aria-labelledby="dropdownMenuIconButton3">
+                    <a class="dropdown-item" href="{% url 'apps:venda:compra_update' c.id %}">
+                      editar
+                    </a>
+                    <a class="dropdown-item" href="#">apagar</a>
+                  </div>
+                </div>
+              </td>
+            </tr>
+            {% endfor %}
+          </tbody>
+        </table>
       </div>
     </div>
   </div>
+</div>
