--- a/apps/account/templates/veterinario/list.html
+++ b/apps/account/templates/veterinario/list.html
@@ -80,7 +80,7 @@
                                             href="{% url 'apps:account:veterinario_update' veterinario.id %}">
                                             editar
                                         </a>
-                                        <a class="dropdown-item" href="#">apagar</a>
+                                        <a class="dropdown-item" href="{% url 'apps:account:veterinario_delete' veterinario.id %}">apagar</a>
                                     </div>
                                 </div>
                             </td>
