--- a/apps/core/templates/home.html
+++ b/apps/core/templates/home.html
@@ -137,9 +137,8 @@
                     <div class="card-body">
                         <div class="d-sm-flex justify-content-between align-items-start">
                             <div>
-                                <h4 class="card-title card-title-dash">Performance Line Chart</h4>
-                                <h5 class="card-subtitle card-subtitle-dash">Lorem Ipsum is simply dummy text of the
-                                    printing</h5>
+                                <h4 class="card-title card-title-dash">Grafico  de perfomace</h4>
+                                <h5 class="card-subtitle card-subtitle-dash">Comparação de serviços e consultas durante a semana</h5>
                             </div>
                             <div id="performance-line-legend">
                                 <div class="chartjs-legend">
@@ -169,3 +168,4 @@
     </div>
     {%endblock%}
     {%block sidebar%} {% include 'partials/sidebar.html' %} {%endblock%}
+
