--- a/apps/venda/templates/partials/table_compra.html
+++ b/apps/venda/templates/partials/table_compra.html
@@ -67,7 +67,7 @@
                     <a class="dropdown-item" href="{% url 'apps:venda:compra_update' c.id %}">
                       editar
                     </a>
-                    <a class="dropdown-item" href="#">apagar</a>
+                    <a class="dropdown-item" href="{%url 'apps:venda:compra_delete' c.id %}">apagar</a>
                   </div>
                 </div>
               </td>
