--- a/apps/account/templates/atendente/list.html
+++ b/apps/account/templates/atendente/list.html
@@ -70,17 +70,17 @@
                             </td>
                             <td>
                                 <div class="dropdown">
-                  <button type="button" class="btn btn-success" id="dropdownMenuIconButton4" data-bs-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    <i class="mdi mdi-chevron-down"></i>
-                  </button>
+                                    <button type="button" class="btn btn-success" id="dropdownMenuIconButton4"
+                                        data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <i class="mdi mdi-chevron-down"></i>
+                                    </button>
                                     </button>
                                     <div class="dropdown-menu" aria-labelledby="dropdownMenuIconButton3">
                                         <a class="dropdown-item"
                                             href="{% url 'apps:account:atendente_update' atendente.id %}">
                                             editar
                                         </a>
-                                        <a class="dropdown-item" href="#">apagar</a>
+                                        <a class="dropdown-item" href="{% url 'apps:account:atendente_delete' atendente.id %}">apagar</a>
                                     </div>
                                 </div>
                             </td>
